P5 Glove/include/P5Dll.cs

    
    // Rotation Units
    public const float                P5Degrees         = 1.0f;
    public const float                P5Radians         = 3.14159f / (180.0f * P5Degrees);
    public const float                P5Revolutions     = P5Degrees / 360.0f;

    
    // What rotation to return via the old interface
    public const int                  P5modeOriginalPYR = 256 * 0;

    public const int                  P5ModeBetterPYR   = 256 * 10;
    public const int                  P5ModeBetterYPR   = 256 * 11;
    public const int                  P5ModeBetterRYP   = 256 * 12;
    public const int                  P5ModeBetterRPY   = 256 * 13;
    public const int                  P5ModeBetterMIX   = 256 * 14;

    public const int                  P5ModeFilteredPYR = 256 * 20;
    public const int                  P5ModeFilteredYPR = 256 * 21;
    public const int                  P5ModeFilteredRYP = 256 * 22;
    public const int                  P5ModeFilteredRPY = 256 * 23;
    public const int                  P5ModeFilteredMIX = 256 * 24;
    #endregion // Constants

    #region Private Membres
    private bool                      _connected = false;
    private int                       _P5id = 0;
    #endregion // Private Membres

    #region Properties
    public bool                       Connected
    {
      get { return _connected; }
    }
    #endregion // Properties

    #region Constructor
    public                            P5Dll()
    {
    }
    #endregion // Constructor

    #region Public methods
    public bool                       Connect()
    {
      _connected                      = P5_Init() == 0 ? false : true ;
      return _connected;
    }

    public void                       Close()
    {
      _connected                      = false;
      P5_Close();
    }

    public P5State                    GetState()
    {
      IntPtr intPtr                   = P5_GetStatePointer(_P5id);
      return (P5State) Marshal.PtrToStructure(intPtr, typeof(P5State));
    }

    public P5Data                     GetData()
    {
      IntPtr intPtr                   = P5_GetDataPointer(_P5id);
      return (P5Data) Marshal.PtrToStructure(intPtr, typeof(P5Data));
    }

    public P5Info                     GetInfo()
    {
      IntPtr intPtr                   = P5_GetInfoPointer(_P5id);
      return (P5Info) Marshal.PtrToStructure(intPtr, typeof(P5Info));
    }

    public void                       SetMouseState(bool state)
    {
      P5_SetMouseState(_P5id, (uint)(state ? 1 : 0));
    }

    #endregion // Public methods

    #region Static imported methods
    /// <summary>
    /// Init function - required on start of program 
    /// </summary>
    /// <returns>Connected (bool)</returns>
    [DllImport("P5Dll.dll")]
    static private extern uint        P5_Init();

    [DllImport("P5Dll.dll")]
    static private extern void        P5_Close();

    [DllImport("P5Dll.dll")]
    static private extern IntPtr      P5_GetCP5DLL();

    [DllImport("P5Dll.dll")]
    static private extern IntPtr      P5_GetCP5();

    [DllImport("P5Dll.dll")]
    static public extern int          P5_GetCount();

    /// <summary>
    /// 
    /// </summary>
    /// <param name="P5Id"></param>
    /// <returns>P5Data *</returns>
    [DllImport("P5Dll.dll")]
    static private extern IntPtr      P5_GetDataPointer(int P5Id);

    /// <summary>
    /// 
    /// </summary>
    /// <param name="P5Id"></param>
    /// <returns>P5State *</returns>
    [DllImport("P5Dll.dll")]
    static private extern IntPtr      P5_GetStatePointer(int P5Id);

    /// <summary>
    /// 
    /// </summary>
    /// <param name="P5Id"></param>
    /// <returns>P5Info *</returns>
    [DllImport("P5Dll.dll")]
    static private extern IntPtr      P5_GetInfoPointer(int P5Id);

    /// <summary>
    /// 
    /// </summary>
    /// <param name="P5Id"></param>
    /// <returns>Void *</returns>
    [DllImport("P5Dll.dll")]
    static private extern IntPtr      P5_GetPrivatePointer(int P5Id);


    [DllImport("P5Dll.dll")]
    static public extern void         P5_SaveBendSensors(int P5Id);

    [DllImport("P5Dll.dll")]
    static public extern void         P5_CalibrateBendSensors(int P5Id);

    [DllImport("P5Dll.dll")]
    static public extern void         P5_CalibratePositionData(int P5Id);

    [DllImport("P5Dll.dll")]
    static public extern void         P5_SetClickSensitivity(int P5Id, byte leftvalue, byte rightvalue, byte middlevalue);

    [DllImport("P5Dll.dll")]
    static public extern void         P5_GetClickSensitivity(int P5Id, ref int leftclick, ref int rightclick, ref int middleclick);

    [DllImport("P5Dll.dll")]
    static public extern uint         P5_GetMouseState(int P5Id);

    /// <summary>
    /// 
    /// </summary>
    /// <param name="P5Id">P5 ID (int)</param>
    /// <param name="state">(bool)</param>
    [DllImport("P5Dll.dll")]
    static private extern void        P5_SetMouseState(int P5Id, uint state);

    [DllImport("P5Dll.dll")]
    static public extern void         P5_SetMouseStickTime(int P5Id, byte time);

    [DllImport("P5Dll.dll")]
    static public extern int          P5_GetMouseStickTime(int P5Id);

    [DllImport("P5Dll.dll")]
    static public extern void         P5_GetMouseButtonAllocation(int P5Id, ref int leftclick, ref int rightclick, ref int middleclick);

    [DllImport("P5Dll.dll")]
    static public extern void         P5_SetMouseButtonAllocation(int P5Id, int leftclickfinger, int rightclickfinger, int middleclickfinger);

    [DllImport("P5Dll.dll")]
    static public extern uint         P5_GetLastError(ref int P5Id, ref int ErrorCode);

    // AC Adaptor
    [DllImport("P5Dll.dll")]
    static public extern uint         P5_GetACAdaptorStatus(int P5Id);

    // Bend Sensors
    [DllImport("P5Dll.dll")]
    static public extern void         P5_GetBendCalibration(int P5Id, ref int ThumbStraight,  ref int ThumbBent,
      ref int IndexStraight,  ref int IndexBent,
      ref int MiddleStraight, ref int MiddleBent,
      ref int RingStraight,   ref int RingBent,
      ref int PinkyStraight,  ref int PinkyBent);

    [DllImport("P5Dll.dll")]
    static public extern void         P5_GetRawFingerBends(int P5Id, ref int thumb, ref int index, ref int middle, ref int ring, ref int pinky);

    [DllImport("P5Dll.dll")]
    static public extern void         P5_GetCalibrationData(int P5Id, byte[] data);

    // Space Warp
    [DllImport("P5Dll.dll")]
    static public extern void         P5_SetUnits(float units);

    [DllImport("P5Dll.dll")]
    static public extern void         P5_SetForwardZ(int z);

    [DllImport("P5Dll.dll")]
    static public extern void         P5_SetTowerPos(int P5Id, float x, float y, float z);

    /// <summary>
    /// 
    /// </summary>
    /// <param name="P5Id"></param>
    /// <param name="RotMat">(float[][3])</param>
    //    [DllImport("P5Dll.dll")]
    //    static public extern void         P5_SetTowerRotMat(int P5Id, float[] RotMat);

    [DllImport("P5Dll.dll")]
    static public extern void         P5_TiltTowerForward(int P5Id, float degrees);

    [DllImport("P5Dll.dll")]
    static public extern void         P5_SpinTowerRight(int P5Id, float degrees);

    [DllImport("P5Dll.dll")]
    static public extern void         P5_TiltTowerRight(int P5Id, float degrees);

    // Glove configuration
    [DllImport("P5Dll.dll")]
    static public extern void         P5_SetLedPos(int P5Id, int led, float x, float y, float z);

    [DllImport("P5Dll.dll")]
    static public extern void         P5_SetGlovePos(int P5Id, float x, float y, float z);

    //    [DllImport("P5Dll.dll")]
    //    static public extern void         P5_SetGloveRotMat(int P5Id, float RotMat[][3]);

    [DllImport("P5Dll.dll")]
    static public extern void         P5_PitchGlove(int P5Id, float theta);

    [DllImport("P5Dll.dll")]
    static public extern void         P5_YawGlove(int P5Id, float theta);

    [DllImport("P5Dll.dll")]
    static public extern void         P5_RollGlove(int P5Id, float theta);


    // Filters
    [DllImport("P5Dll.dll")]
    static public extern void         P5_SetInterfaceMode(int mode);

    [DllImport("P5Dll.dll")]
    static public extern void         P5_SetFilterMode(int filters);

    [DllImport("P5Dll.dll")]
    static public extern void         P5_SetFilterAmount(int ExtraFrames, float DeadDistance);

    [DllImport("P5Dll.dll")]
    static public extern void         P5_ClearArchive(int P5Id);

    [DllImport("P5Dll.dll")]
    static public extern void         P5_SetRequiredAccuracy(float accuracy);

    // Mouse
    [DllImport("P5Dll.dll")]
    static public extern void         P5_RestoreMouse(int P5Id);

    [DllImport("P5Dll.dll")]
    static public extern void         P5_UnRestoreMouse(int P5Id);


    // Low level hardware control
    [DllImport("P5Dll.dll")]
    static public extern void         P5_SetFeature(int P5Id, byte usage, byte numvalues, ref byte reportdata);

    [DllImport("P5Dll.dll")]
    static public extern void         P5_SetFeatureReport(int P5Id, byte report, byte numvalues, ref byte reportdata);

    [DllImport("P5Dll.dll")]
    static public extern int          P5_GetFeature(int P5Id, byte usage, byte numvalues, ref byte reportdata);

    [DllImport("P5Dll.dll")]
    static public extern int          P5_GetFeatureReport(int P5Id, byte report, byte numvalues, ref byte reportdata);

    // Copy structures
    [DllImport("P5Dll.dll")]
    static public extern void         P5_GetData(int P5Id, ref P5Data data);

    [DllImport("P5Dll.dll")]
    static public extern void         P5_GetState(int P5Id, int frame, ref P5State state);

    [DllImport("P5Dll.dll")]
    static public extern void         P5_GetInfo(int P5Id, ref P5Info info);


    // Get values stored in structures
    [DllImport("P5Dll.dll")]
    static public extern void       P5_GetAbsolutePos(int P5Id, ref float x, ref float y, ref float z);

    [DllImport("P5Dll.dll")]
    static public extern void       P5_GetRelativePos(int P5Id, ref float x, ref float y, ref float z);

    [DllImport("P5Dll.dll")]
    static public extern void       P5_GetRelativeAvgPos(int P5Id, ref float x, ref float y, ref float z);

    [DllImport("P5Dll.dll")]
    static public extern void       P5_GetRotation(int P5Id, ref float yaw, ref float pitch, ref float roll);

    [DllImport("P5Dll.dll")]
    static public extern void       P5_GetFingerBends(int P5Id, ref float thumb, ref float index, ref float middle, ref float ring, ref float pinky);

    [DllImport("P5Dll.dll")]
    static public extern void       P5_GetButtons(int P5Id, ref float A, ref float B, ref float C, ref float D);

    [DllImport("P5Dll.dll")]
    static public extern uint       P5_GetThreadStatus(int P5Id);
    #endregion // Static imported methods
  }
  #endregion // P5Dll: P5 Class
}
